<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/llNotificationInfoInputLayout"
    android:orientation="vertical"
    android:layout_centerInParent="true">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/etFirstName"
            android:layout_gravity="center"
            android:minWidth="200dp"
            android:layout_below="@+id/etLastName"
            android:inputType="textCapSentences"
            android:hint="@string/firstName"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/etLastName"
            android:layout_marginTop="5dp"
            android:layout_gravity="center"
            android:minWidth="200dp"
            android:inputType="textCapSentences"
            android:hint="@string/lastName"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dobLabel"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:textSize="20sp"/>

        <DatePicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dpDob"
            android:hint="@string/dob"
            android:datePickerMode="spinner"
            android:layout_below="@+id/etFirstName"
            android:layout_gravity="center"/>
    </LinearLayout>
</RelativeLayout>
