<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:layout_centerInParent="true"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".CheckInActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">
        <TextView android:text="@string/welcome" android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvWelcome"
            android:textSize="20sp"
            android:gravity="center"
            android:paddingBottom="15dp"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/licenseScanButton"
            android:id="@+id/btnLicenseScan"
            android:minHeight="45dp"
            android:layout_below="@+id/tvWelcome"/>

        <TextView android:text="@string/or" android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnLicenseScan"
            android:gravity="center"
            android:id="@+id/tvOr"
            android:textSize="20sp"
            android:paddingBottom="12dp"
            android:paddingTop="12dp"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnInfoSubmit"
            android:minHeight="45dp"
            android:text="@string/manualEntryBtn"/>

    </LinearLayout>

</RelativeLayout>
