<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/llNotificationInfoInputLayout"
        android:orientation="vertical"
        android:layout_centerInParent="true">
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_centerInParent="true"
    android:orientation="vertical"
    android:layout_height="wrap_content">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/phoneHint"
        android:layout_marginTop="5dp"
        android:id="@+id/etPhoneNumber"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/andOr"
        android:textSize="20sp"
        android:id="@+id/tvNotificationOr"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:layout_gravity="center"
        android:layout_below="@+id/etPhoneNumber"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/emailHint"
        android:id="@+id/etEmail"
        android:layout_gravity="center"
        android:minWidth="250dp"
        android:layout_below="@+id/tvNotificationOr"/>
    </LinearLayout>


</RelativeLayout>
