<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:layout_centerInParent="true"
    tools:context="com.sixwonders.courtkiosk.CompletedRegistrationActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:id="@+id/llContinuationLayout">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:weightSum="1"
        android:layout_height="wrap_content"
        android:id="@+id/llContHeader">
    <TextView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/continuationHeader"
        android:id="@+id/tvContHeader"
        android:textSize="20sp"
        android:layout_weight=".6"
        android:gravity="center"
        android:layout_marginLeft="25dp"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".4"
            android:id="@+id/ibContinuationInfo"
            android:src="@drawable/info_img_selector"
            android:layout_toRightOf="@+id/tvContHeader"
            />
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llContHeader"
        android:gravity="center">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnContinuationYes"
            android:text="@string/yes"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnContinuationNo"
            android:text="@string/no"
            android:layout_toRightOf="@+id/btnContinuationYes"/>
    </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/llNotificationLayout"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_marginTop="-25dp"
        android:visibility="gone">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notificationQuestion"
        android:id="@+id/tvNotificationQuestion"
        android:layout_centerInParent="true"
        android:layout_marginBottom="15dp"
        android:textSize="20sp"/>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvNotificationQuestion"
            android:gravity="center">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnNotificationYes"
            android:text="@string/yes"
            android:layout_centerInParent="true"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnNotificationNo"
            android:text="@string/no"
            android:layout_toRightOf="@+id/btnNotificationYes"
            android:layout_centerInParent="true"/>
     </RelativeLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnBackToContinuation"
            android:visibility="gone"
            android:text="@string/back"
            android:layout_centerInParent="true"
            android:layout_marginTop="45dp"
            android:layout_below="@+id/tvNotificationQuestion"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/llSuccessSignIn"
        android:layout_centerInParent="true"
        android:layout_margin="-25dp"
        android:visibility="gone">
        <TextView android:text="@string/thanksForRegistering" android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:id="@+id/tvThanksForRegistering"
            android:gravity="center"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvThanksForRegistering"
            android:text="@string/newUser"
            android:layout_centerInParent="true"
            android:id="@+id/btnRestart"/>

        </RelativeLayout>


</RelativeLayout>
